--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="app_name">AppName</string>
     <string name="selection_chars">Chars</string>
+    <string name="selection_words">Words</string>
     <string-array name="selection_options">
         <item>Chars</item>
         <item>Numbers</item>
